[package]
name = "call_jup_swap"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = "0.31"
# anchor-spl = "0.31"

solana-client = "2.1"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jup-ag = "0.9.1"
anyhow = "1.0.100"
base64 = "0.22.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
